--- a/demo-client/src/index.css
+++ b/demo-client/src/index.css
@@ -15,6 +15,33 @@ a:hover {
     color: #7f7fff;
 }
 
+.controls {
+    font-size: 16px;
+}
+
+.button {
+    background-color: #cfcfff;
+    border-color: #000000;
+    border-radius: 8px;
+    border-style: solid;
+    border-width: 1px;
+    display: inline-block;
+    font-size: 20px;
+    margin: 2px;
+    text-align: center;
+    min-width: 128px;
+    height: 48px;
+    line-height: 48px;
+}
+
+.button:hover {
+    background-color: #efefff;
+}
+
+.button:active {
+    background-color: #7f7fff;
+}
+
 .timeis {
     font-size: 36px;
     text-align: right;
