--- a/settings-ui/src/LogoCard.sass
+++ b/settings-ui/src/LogoCard.sass
@@ -5,5 +5,8 @@
 
 .logoCardBody
   display: flex
+  align-items: center
   span
     color: var(--colour-primary)
+    font-size: 2.2em
+    font-weight: bold
