--- a/settings-ui/src/SecondaryBox.sass
+++ b/settings-ui/src/SecondaryBox.sass
@@ -1,10 +1,10 @@
 .secondaryBox
-  flex-basis: 25%
-  margin: 0.2em
+  flex-grow: 1
+  max-width: 25%
   height: 100%
   display: flex
-  border: 1px solid var(--colour-secondary)
-  background-color: var(--colour-secondary-bg)
+  //border: 1px solid var(--colour-secondary)
+  background-color: var(--colour-contentbg)
   border-radius: 0.5em
   padding: 1em
   flex-direction: column
