--- a/settings-ui/src/StreamBox.sass
+++ b/settings-ui/src/StreamBox.sass
@@ -1,6 +1,7 @@
 .streamInfo
   display: flex
   flex-direction: column
+  gap: 0.5em
 
 .sboxHeader
   display: flex
@@ -8,3 +9,27 @@
   color: var(--colour-primary)
   font-size: 1.5rem
   font-weight: 700
+
+.variantCtr
+  display: flex
+  justify-content: space-between
+
+.variantInfo
+  display: flex
+  flex-direction: column
+
+  h4
+    margin-top: 0
+    margin-bottom: 0.2em
+    font-weight: bold
+
+.channelInfoBox
+  padding: 0.5em
+  display: flex
+  flex-direction: column
+  color: var(--colour-primary)
+  background-color: var(--colour-secondary-bg)
+  border-radius: 0.5em
+
+  hr
+    border-top: 1px dashed var(--colour-primary)
