--- a/demo-client/src/components/Footer.scss
+++ b/demo-client/src/components/Footer.scss
@@ -1,5 +1,9 @@
+@use "../styles/variables" as *;
+@use "../styles/colors" as c;
+
+
 footer {
     min-height: 5em;
 
-    border-top: 1px solid grey;
+    background-color: c.$content-bg;
 }
