--- a/demo-client/src/index.scss
+++ b/demo-client/src/index.scss
@@ -1,4 +1,5 @@
 @use "styles/variables" as *;
+@use "styles/colors" as c;
 
 /*
     Global overrides
@@ -10,6 +11,9 @@ body {
 
     font-family: sans-serif;
 
+    color: c.$primary;
+    background-color: c.$primary-bg;
+
     &.debug * {
         outline: 1px dashed grey;
     }
@@ -17,11 +21,19 @@ body {
 
 
 a {
-    color: #0000cf;
+    color: c.$link;
     text-decoration: none;
 
+    &:visited {
+        color: c.$link-visited;
+    }
+
     &:hover {
-        color: #7f7fff;
+       color: c.$link-hover;
+    }
+
+    &:active {
+        color: c.$link-active;
     }
 }
 
@@ -39,10 +51,11 @@ a {
 
     & main {
         flex: 1;
+        padding: 2em 1em;
     }
 
     & > * {
-        padding: 0.5em;
+        padding: 1em;
     }
 }
 
