Settings UI now can add/remove variants

--- a/settings-ui/src/StreamBox.sass
+++ b/settings-ui/src/StreamBox.sass
@@ -9,19 +9,17 @@
   color: var(--colour-primary)
   font-size: 1.5rem
   font-weight: 700
+  max-height: 1.4em
 
-.variantCtr
+  .portStatus
+    flex-direction: row
+    margin-top: -0.2em
+    h3
+      font-size: 0.7em
+
+.variantInfoRow
   display: flex
-  justify-content: space-between
-
-.variantInfo
-  display: flex
-  flex-direction: column
-
-  h4
-    margin-top: 0
-    margin-bottom: 0.2em
-    font-weight: bold
+  gap: 0.5em
 
 .channelInfoBox
   padding: 0.5em
