--- a/settings-ui/src/index.sass
+++ b/settings-ui/src/index.sass
@@ -3,7 +3,7 @@ body
   --colour-background: #0E1118
   --colour-contentbg: #0D2847
   --colour-secondary: #0E56AB
-  --colour-secondary-bg: rgba(14, 86, 171, 0.8)
+  --colour-secondary-bg: rgba(14, 86, 171, 0.4)
 
   background-color: var(--colour-background)
 
@@ -12,8 +12,18 @@ body
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
+  font-size: 0.8em
+
 
 h2
   color: var(--colour-primary)
   font-size: 2rem
   font-weight: 700
+
+
+// PLEASE REFRAIN FROM EATING CRAYONS.
+html
+  box-sizing: border-box
+
+*, *:before, *:after
+  box-sizing: inherit
