--- a/settings-ui/src/modal/Modal.sass
+++ b/settings-ui/src/modal/Modal.sass
@@ -11,13 +11,61 @@
 
 .modal
   border-radius: 1em
-  padding: 0.5em
+  padding: 0.8em
   display: flex
   flex-direction: column
-  background-color: var(--colour-secondary-bg)
+  background-color: #0D2847
   max-height: 80%
   min-width: 40%
+  max-width: 80%
   overflow-y: auto
+  gap: 0.5em
 
   h2
     margin-top: 0
+    font-weight: 700
+
+.modalBtnRow
+  display: flex
+  width: 100%
+
+.modalBtn
+  display: flex
+  align-items: center
+  gap: 0.5em
+  font-weight: bold
+  flex-grow: 1
+  color: #4c8cd4
+  padding: 0.6em 0.7em 0.6em 0.7em
+  margin-bottom: -0.8em
+
+  &:hover
+    filter: brightness(1.3)
+
+  &.left
+    margin-left: -0.8em
+    border-bottom-left-radius: 1em
+    background-color: #0D2847
+
+  &.right
+    margin-right: -0.8em
+    background-color: #1A3C6B
+    border-bottom-right-radius: 1em
+    text-align: right
+    flex-direction: row-reverse
+
+.btnDesc
+  display: flex
+  flex-direction: column
+  color: var(--colour-primary)
+  width: 50%
+
+  span
+    font-size: 1.5em
+
+hr
+  width: 90%
+  border-bottom: none
+  border-left: none
+  border-right: none
+  border-top: 1px solid var(--colour-secondary)
