Don't set an aspect ratio for the player
It should find the right aspect ratio with `height: auto`, but ensure the height
doesn't outgrow the viewport

--- a/demo-client/src/components/Player.scss
+++ b/demo-client/src/components/Player.scss
@@ -8,11 +8,13 @@
 
     background-color: c.$secondary-bg;
 
+    align-self: center;
+
     & video {
         border: 1px solid c.$border;
 
-        width: 100%;
-        aspect-ratio: 16 / 9;
+        max-width: 100%;
+        max-height: 100vh;
     }
 
     & .video-controls {
