--- a/demo-client/src/components/Player.scss
+++ b/demo-client/src/components/Player.scss
@@ -10,11 +10,16 @@
 
     align-self: center;
 
+    width: 100%;
+
     & video {
         border: 1px solid c.$border;
 
         max-width: 100%;
         max-height: 100vh;
+        max-height: 100svh; // Limit to small viewport height for devices with dynamic viewports
+
+        width: 100%;
     }
 
     & .video-controls {
