demo: Path nav with page names

--- a/demo-client/src/components/Card.scss
+++ b/demo-client/src/components/Card.scss
@@ -4,9 +4,12 @@
 .card-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: flex-start;
 
     gap: 2em;
+
+    padding: 1em;
 }
 
 
