--- a/settings-ui/src/SecondaryBox.sass
+++ b/settings-ui/src/SecondaryBox.sass
@@ -1,6 +1,6 @@
 .secondaryBox
   flex-grow: 1
-  max-width: 25%
+  max-width: 24.5em
   height: 100%
   display: flex
   //border: 1px solid var(--colour-secondary)
