--- a/settings-ui/src/modal/Modal.sass
+++ b/settings-ui/src/modal/Modal.sass
@@ -15,7 +15,7 @@
   display: flex
   flex-direction: column
   background-color: #0D2847
-  max-height: 80%
+  max-height: 90%
   min-width: 40%
   max-width: 80%
   overflow-y: auto
@@ -28,6 +28,7 @@
 .modalBtnRow
   display: flex
   width: 100%
+  user-select: none
 
 .modalBtn
   display: flex
@@ -38,9 +39,12 @@
   color: #4c8cd4
   padding: 0.6em 0.7em 0.6em 0.7em
   margin-bottom: -0.8em
+  cursor: pointer
 
-  &:hover
-    filter: brightness(1.3)
+
+  @media (hover: hover)
+    &:hover
+      filter: brightness(1.3)
 
   &.left
     margin-left: -0.8em
