--- a/settings-ui/src/components/BoxBtn.sass
+++ b/settings-ui/src/components/BoxBtn.sass
@@ -8,6 +8,10 @@
     align-items: center
     border-radius: 1em
     cursor: pointer
+    svg
+        stroke: var(--colour-primary)
+        g
+            fill: var(--colour-primary)
 
     &.active
         border: 4px solid darken(#4C8CD4, 10%)
