--- a/demo-client/src/components/Footer.scss
+++ b/demo-client/src/components/Footer.scss
@@ -7,24 +7,42 @@ footer {
 
     background-color: c.$content-bg;
 
-    & .content-width {
+    & .footer {
         display: flex;
         flex-direction: row;
-        gap: 1em;
-    }
+        justify-content: flex-start;
+        gap: 3em;
 
-    & .footer-block {
-        & .title {
-            font-size: 1.5em;
+        & > * {
+            flex: 0 0 auto;
+
+            & .title {
+                font-size: 1.5em;
+            }
+
+            & ul {
+                list-style-type: none;
+                padding-left: 0.5em;
+                margin: 0.5em 0;
+
+                & li {
+                    margin: 0.25em 0;
+                }
+            }
         }
 
-        & ul {
-            list-style-type: none;
-            padding-left: 1em;
-            margin: 0.5em 0;
+        & .credits {
+            flex: 1;
+            align-self: flex-end;
 
-            & li {
-                margin: 0.25em 0;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+            align-items: stretch;
+            gap: 0.75em;
+
+            & img {
+                height: 1.5em;
             }
         }
     }
