--- a/settings-ui/src/PortStatus.sass
+++ b/settings-ui/src/PortStatus.sass
@@ -7,9 +7,9 @@
     margin: 0
 
   &.connected
-    color: green
+    color: var(--colour-primary)
     g
-      fill: green
+      fill: var(--colour-primary)
 
   &.disconnected
     color: grey
