Tiny layout tweakage

--- a/settings-ui/src/NewChannelButton.sass
+++ b/settings-ui/src/NewChannelButton.sass
@@ -2,6 +2,8 @@
   user-select: none
   color: var(--colour-primary)
   max-width: 15%
+  flex-basis: 15%
+  max-height: 11em
   display: flex
   border: 3px solid var(--colour-secondary)
   background-color: var(--colour-contentbg)
