Make green greener again

--- a/settings-ui/src/PortStatus.sass
+++ b/settings-ui/src/PortStatus.sass
@@ -7,9 +7,9 @@
     margin: 0
 
   &.connected
-    color: var(--colour-primary)
+    color: #009f00
     g
-      fill: var(--colour-primary)
+      fill: #009f00
 
   &.disconnected
     color: grey
