demo: remove all trace of labels in the UI

--- a/demo-client/src/components/Player.scss
+++ b/demo-client/src/components/Player.scss
@@ -41,11 +41,11 @@
             grid-column: $start-stop;
         }
 
-        & label.angle {
+        & select.angle {
             grid-column: $angle;
         }
 
-        & label.quality {
+        & select.quality {
             grid-column: $quality;
         }
 
