demo: remove indent in footer link lists

--- a/demo-client/src/components/Footer.scss
+++ b/demo-client/src/components/Footer.scss
@@ -22,12 +22,7 @@ footer {
 
             & ul {
                 list-style-type: none;
-                padding-left: 0.5em;
-                margin: 0.5em 0;
-
-                & li {
-                    margin: 0.25em 0;
-                }
+                padding-left: 0;
             }
         }
 
