--- a/demo-client/src/index.scss
+++ b/demo-client/src/index.scss
@@ -9,7 +9,8 @@ body {
     margin: 0;
     padding: 0;
 
-    font-family: sans-serif;
+    font-family: "Montserrat", sans-serif;
+    letter-spacing: 0.03em;
 
     color: c.$primary;
     background-color: c.$primary-bg;
