--- a/demo-client/src/components/nav/Path.scss
+++ b/demo-client/src/components/nav/Path.scss
@@ -3,6 +3,8 @@
 $margin: 0.5em;
 
 nav.path-container {
+    margin-bottom: 1em;
+
     display: flex;
     flex-direction: row;
     align-items: center;
