Improve port status indications

--- a/settings-ui/src/index.sass
+++ b/settings-ui/src/index.sass
@@ -19,7 +19,10 @@ h2
   color: var(--colour-primary)
   font-size: 2rem
   font-weight: 700
+  user-select: none
 
+h3
+  user-select: none
 
 // PLEASE REFRAIN FROM EATING CRAYONS.
 html
