--- a/settings-ui/src/PortStatus.sass
+++ b/settings-ui/src/PortStatus.sass
@@ -1,10 +1,25 @@
+@keyframes pulsate
+  0%, 100%
+    filter: brightness(100%)
+
+  50%
+    filter: brightness(170%)
+
+
 .portStatus
   display: flex
   flex-direction: column
+  user-select: none
 
   align-items: center
   h3
     margin: 0
+
+  &.streaming
+    animation: pulsate 2s infinite
+    color: var(--colour-secondary)
+    g
+      fill: var(--colour-secondary)
 
   &.connected
     color: #009f00
