Show resolutions as pixel counts

--- a/settings-ui/src/components/BoxBtn.sass
+++ b/settings-ui/src/components/BoxBtn.sass
@@ -19,7 +19,7 @@
         filter: brightness(130%)
 
     &.disabled
-        span
+        p
             color: #7c7c7c
         background-color: #353844
         pointer-events: none
@@ -33,6 +33,9 @@
         font-size: 0.8em
 
 .boxBtnLabel
+    white-space: pre
+    text-align: center
+    margin: 0
     color: var(--colour-primary)
     font-weight: bold
 
