Do a probe whenever the edit modal is opened
This slows down UI interactions, but makes it much harder to
cause an error by using a non-attached input by accident,
which is very easy to do.

--- a/settings-ui/src/Loading.sass
+++ b/settings-ui/src/Loading.sass
@@ -1,12 +1,12 @@
-.kaput
+.loadContainer
     display: flex
     color: var(--colour-primary)
     flex-direction: column
     gap: 0.2em
     font-size: 3em
     font-weight: bold
-    width: 100vw
-    height: 100vh
+    width: 100%
+    height: 100%
     align-items: center
     justify-content: center
     user-select: none
