--- a/settings-ui/src/App.sass
+++ b/settings-ui/src/App.sass
@@ -10,6 +10,10 @@
 //  width: 100%
 //  height: 100%
 
+.fullscreenLoader
+  height: 100vh
+  width: 100vw
+
 .mainCols
   display: flex
   gap: 1em
